feat: more-news, news-container, filter-news components created. search operation and architectural arrangements made.

--- a/newslyapp/src/app/features/news/components/news-detail/news-detail.component.scss
+++ b/newslyapp/src/app/features/news/components/news-detail/news-detail.component.scss
@@ -11,3 +11,13 @@
     letter-spacing: -.005em;
     margin-bottom: 1rem;
 }
+
+.news-detail{
+    flex: 0 0 66.666667%;
+    max-width: 66.666667%;
+}
+
+.more{
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+}
