--- a/newslyapp/src/app/shared/components/footer/footer.component.html
+++ b/newslyapp/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="width-full mb-40px">
+<div class="width-full">
     <div class="mt-20px letter-spacing-custom-tight font-size-12px line-height-loose font-weight-medium">
         <div class="mb-5px">
             <span class="span-hover">Reklam</span>
