--- a/newslyapp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/newslyapp/src/app/shared/components/sidebar/sidebar.component.html
@@ -16,5 +16,8 @@
         <div class="mt-80px pl-50px">
             <app-theme-switcher></app-theme-switcher>
         </div>
+        <div class="position-absolute bottom-10px d-none">
+            <app-footer></app-footer>
+        </div>
     </div>
 </div>
