--- a/newslyapp/src/app/features/news/components/news-category/news-category.component.html
+++ b/newslyapp/src/app/features/news/components/news-category/news-category.component.html
@@ -4,10 +4,13 @@
     </div>
     <div class="d-flex">
         <div class="card" style="float: left;">
-            <app-card [news]="news"></app-card>
+            <app-news-container [news]="news"></app-news-container>
         </div>
         <div class="popular">
             <div style="float: right;">
+                <div class="mb-40px">
+                    <app-footer></app-footer>
+                </div>
                 <app-popular-news [news]="news"></app-popular-news>
             </div>
         </div>
