--- a/newslyapp/src/app/features/popular-news/popular-news.component.html
+++ b/newslyapp/src/app/features/popular-news/popular-news.component.html
@@ -1,6 +1,6 @@
 <div class="theme-div padding-30px border-radius-8px width-full max-width-300px" >
     <p class="font-weight-bolder font-size-3xl letter-spacing-custom mb-35px">Popüler</p>
-    <div *ngFor="let news of news; let last = last" class="cursor-pointer popular-card">
+    <div *ngFor="let news of news; let last = last" class="cursor-pointer popular-card" [routerLink]="[news.id, news.title]">
         <div class="d-flex align-items-center mb-25px" style="gap: 10px;">
             <img [src]="news.image" class="width-30px height-30px object-fit-contain border-radius-50">
             <span class="color-gray text-uppercase font-weight-medium letter-spacing-tighter font-size-xs">{{news.author}}</span>
