--- a/newslyapp/src/app/shared/components/search/search.component.html
+++ b/newslyapp/src/app/shared/components/search/search.component.html
@@ -6,9 +6,9 @@
             <line x1="16.018" x2="19.542" y1="16.485" y2="20"></line>
         </g>
     </svg>
-    <input type="text" [(ngModel)]="inputValue" placeholder="Haber ve konu ara"
+    <input type="text" [(ngModel)]="searchTerm" placeholder="Haber ve konu ara" [ngClass]="{'has-content': searchTerm.length > 0}"
         class="width-170px bg-input font-weight-semibold line-height-tight font-size-15px  border-none outline-none">
-    <div class="ml-5px" *ngIf="inputValue">
-        <button class="bg-orange border-none outline-none text-white height-24px pl-5px pr-5px button-animation">&rarr;</button>
+    <div class="ml-5px" *ngIf="searchTerm">
+        <button class="bg-orange cursor-pointer border-none outline-none text-white height-24px pl-5px pr-5px button-animation" (click)="onSearch()">&rarr;</button>
     </div>
 </div>
