--- a/newslyapp/src/assets/css/_typography.scss
+++ b/newslyapp/src/assets/css/_typography.scss
@@ -3,6 +3,10 @@
   font-size: $size;
 }
 
+@mixin font-style($style) {
+  font-style: $style;
+}
+
 @mixin font-weight($weight) {
   font-weight: $weight;
 }
@@ -39,6 +43,10 @@
 
 .font-size-12px{
   @include font-size(12px); // 12px
+}
+
+.font-size-13px{
+  @include font-size(13px); // 13px
 }
 
 .font-size-sm {
@@ -128,6 +136,10 @@
   @include line-height(42px);
 }
 
+.line-height-3xl{
+  @include line-height(54px);
+}
+
 // Font Family Classes
 $font-family-primary: 'Inter', normal;
 $font-family-secondary: 'Inter', normal;
@@ -188,6 +200,18 @@ $font-family-secondary: 'Inter', normal;
 
 .letter-spacing-custom-tight {
   @include letter-spacing(-0.01em); // New class with letter-spacing: -0.01em
+}
+
+.text-italic{
+  @include font-style(italic);
+}
+
+.text-normal{
+  @include font-style(normal)
+}
+
+.text-bold{
+  @include font-style(bold);
 }
 
 .text-align-center{
