feat: route adjustment made, slug added.

--- a/newslyapp/src/app/features/news/components/news-category/news-category.component.html
+++ b/newslyapp/src/app/features/news/components/news-category/news-category.component.html
@@ -1,18 +1,3 @@
-<div *ngIf="news.length > 0">
-    <div class="theme-div border-radius-6px padding-30px mb-35px">
-        <app-slider [news]="news"></app-slider>
-    </div>
-    <div class="d-flex">
-        <div class="card" style="float: left;">
-            <app-news-container [news]="news"></app-news-container>
-        </div>
-        <div class="popular">
-            <div style="float: right;">
-                <div class="mb-40px">
-                    <app-footer></app-footer>
-                </div>
-                <app-popular-news [news]="news"></app-popular-news>
-            </div>
-        </div>
-    </div>
+<div>
+    <router-outlet></router-outlet>
 </div>
