feat: add ui responsive.

--- a/newslyapp/src/app/features/news/components/more-news/more-news.component.html
+++ b/newslyapp/src/app/features/news/components/more-news/more-news.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%; float: right;">
+<div class="width-full max-width-300px">
     <p class="font-size-sm font-weight-bold letter-spacing-tight line-height-3xl pl-10px">DAHA FAZLA GÜNDEM</p>
-    <app-card [news]="randomNews"></app-card>
+    <app-card [news]="randomNews" width="100%"></app-card>
 </div>
