--- a/newslyapp/src/app/features/news/components/news-container/news-container.component.html
+++ b/newslyapp/src/app/features/news/components/news-container/news-container.component.html
@@ -1,9 +1,8 @@
-<div class="d-flex width-full">
-    <div class="left-side" style="width: 50%; float: left;">
-        <app-card [news]="leftSide"></app-card>
+<div class="container">
+    <div class="left-side">
+        <app-card [width]="isMobile ? '100%' : '90%'" [news]="leftSide"></app-card>
     </div>
-
-    <div class="right-side" style="width: 50%; float: right;">
-        <app-card [news]="rightSide"></app-card>
+    <div class="right-side">
+        <app-card [width]="isMobile ? '100%' : '90%'" [news]="rightSide"></app-card>
     </div>
 </div>
