--- a/newslyapp/src/assets/css/color.scss
+++ b/newslyapp/src/assets/css/color.scss
@@ -32,7 +32,7 @@ $themes: (
     info: #64b5f6,
     light: #424242,
     dark: #000000,
-    text-gray: #ecf0f1,
+    text-gray: #747f86,
     p: #c7cbd1,
     gray: #bbbbbb,
     a: #add8e6,
