--- a/newslyapp/src/assets/css/color2.scss
+++ b/newslyapp/src/assets/css/color2.scss
@@ -1,6 +1,6 @@
 $colors: (
   'white': #ffffff,
-  'black': #000000,
+  'black': #1e2023,
   'red': #E62C33,
   'green': #00ff00,
   'blue': #0000ff,
@@ -9,8 +9,9 @@ $colors: (
   'gray': #888888,
   'dark-gray': #555555,
   'light-gray': #cccccc,
-  'panel': #0c0f12,
+  'panel': #15171a,
   '404' : #12161b,
+  'off-white' : #c7cbd1,
 );
 
 @mixin generate-background-classes($color-map) {
