--- a/newslyapp/src/app/features/news/components/filter-news/filter-news.component.scss
+++ b/newslyapp/src/app/features/news/components/filter-news/filter-news.component.scss
@@ -1,9 +1,20 @@
-.card{
+.card {
     flex: 0 0 66.666667%;
     max-width: 66.666667%;
+    transition: flex 0.5s ease, max-width 0.5s ease;
+
+    @media (max-width: 767px) {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
 
-.popular{
+.popular {
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
+    transition: flex 0.5s ease, max-width 0.5s ease;
+
+    @media (max-width: 767px) {
+        display: none;
+    }
 }
