--- a/newslyapp/src/app/features/news/components/news-list/news-list.component.scss
+++ b/newslyapp/src/app/features/news/components/news-list/news-list.component.scss
@@ -1,16 +1,26 @@
-::ng-deep .content-container h1 {
-    font-size: 2em;
-    color: aliceblue;
+.card{
+    flex: 0 0 66.666667%;
+    max-width: 66.666667%;
+    transition: flex 0.5s ease, max-width 0.5s ease;
+
+    @media (max-width: 767px) {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
 
-::ng-deep .content-container .content-content p,
-::ng-deep .content-container .content-content li {
-    color: aliceblue;
-    font-size: 1.3em;
-    line-height: 1.6;
+.popular{
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+    transition: flex 0.5s ease, max-width 0.5s ease;
+    
+    @media (max-width: 767px) {
+        display: none;
+      }
 }
 
-::ng-deep .content-container .content-content img {
-    width: 400px;
-    height: 200px;
+.news-list{
+    @media (max-width: 1283px){
+        margin: 0 10px;
+      }
 }
