--- a/newslyapp/src/app/shared/components/header/header.component.html
+++ b/newslyapp/src/app/shared/components/header/header.component.html
@@ -1,8 +1,25 @@
-<div class="width-full height-97px d-flex align-items-center justify-content-between">
-    <div>
-        <app-search></app-search>
+<ng-container *ngIf="isDesktop">
+    <div class="width-full height-97px d-flex align-items-center justify-content-between deskop-header">
+        <div class="toggle-sidebar color-gray disabled" (click)="openSidenav()">☰</div>
+        <div>
+            <app-search></app-search>
+        </div>
+        <div>
+            <app-location></app-location>
+        </div>
     </div>
-    <div>
-        <app-location></app-location>
+</ng-container>
+
+<ng-container *ngIf="!isDesktop">
+    <div class="bg-black width-full height-60px d-flex align-items-center justify-content-between mb-35px">
+        <div class="toggle-sidebar text-off-white ml-20px" (click)="openSidenav()">☰</div>
+        <img src="assets/img/common/logo.png" width="80" height="auto">
+        <svg class="mr-20px" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" id="search">
+            <g  fill="none" fill-rule="evenodd" stroke="#c7cbd1" stroke-linecap="round"
+                stroke-linejoin="round" stroke-width="1.5" transform="translate(2 2)">
+                <circle cx="9.767" cy="9.767" r="8.989"></circle>
+                <line x1="16.018" x2="19.542" y1="16.485" y2="20"></line>
+            </g>
+        </svg>
     </div>
-</div>
+</ng-container>
