--- a/newslyapp/src/app/shared/components/slider/slider.component.scss
+++ b/newslyapp/src/app/shared/components/slider/slider.component.scss
@@ -8,6 +8,23 @@
   transform: translateY(-50%);
   cursor: pointer;
 }
+.slider-content{
+  transition: margin 0.5s ease;
+  @media (max-width: 1024px) {
+    margin: 18px;
+  }
+  @media (max-width: 767px) {
+    margin: 15px;
+  }
+}
 
+.slider-text {
+  p {
+    transition: padding 0.5s ease, flex 0.5s ease, max-width 0.5s ease;
+    padding: 20px;
 
-
+    @media (max-width: 767px) {
+      padding: 0;
+    }
+  }
+}
