--- a/newslyapp/src/assets/css/_custom.scss
+++ b/newslyapp/src/assets/css/_custom.scss
@@ -5,6 +5,9 @@ $size-values: (
     40px,
     42px,
     50px,
+    55px,
+    60px,
+    65px,
     75px,
     80px,
     97px,
@@ -12,6 +15,7 @@ $size-values: (
     150px,
     170px,
     200px,
+    245px,
     250px,
     270px,
     300px,
