--- a/newslyapp/src/app/shared/components/layout/layout.component.html
+++ b/newslyapp/src/app/shared/components/layout/layout.component.html
@@ -4,10 +4,10 @@
     </div>
     <div class="margin-auto width-full max-width-1024px">
         <div class="flex-grow-1">
-            <div class="mb-35px content">
+            <div class="mb-35px header">
                 <app-header (toggleSidebar)="toggleSidebar()"></app-header>
             </div>
-            <div class="mb-35px">
+            <div class="mb-35px content">
                 <router-outlet></router-outlet>
             </div>
         </div>
