--- a/newslyapp/src/app/shared/components/layout/layout.component.scss
+++ b/newslyapp/src/app/shared/components/layout/layout.component.scss
@@ -7,13 +7,19 @@
       overflow: hidden; 
     }
   }
-.content{
+.header{
   @media (max-width: 1283px){
-    margin: 0 10px;
+    margin: 0 40px;
   }
 
   @media(max-width:500px){
     margin: 0;
+  }
+}
+
+.content{
+  @media (max-width: 1283px){
+    margin: 0 10px;
   }
 }
   
