--- a/newslyapp/src/app/features/news/components/filter-news/filter-news.component.scss
+++ b/newslyapp/src/app/features/news/components/filter-news/filter-news.component.scss
@@ -2,6 +2,7 @@
     flex: 0 0 66.666667%;
     max-width: 66.666667%;
     transition: flex 0.5s ease, max-width 0.5s ease;
+    padding-right: 10px;
 
     @media (max-width: 767px) {
         flex: 0 0 100%;
@@ -18,3 +19,4 @@
         display: none;
     }
 }
+
