--- a/newslyapp/src/app/features/auth/login/login.component.html
+++ b/newslyapp/src/app/features/auth/login/login.component.html
@@ -5,14 +5,14 @@
             <h2 class="letter-spacing-2px font-size-3xl pt-15px">ADMİN PANEL</h2>
         </div>
         <div class="login-form">
-            <form class="width-full pr-30px pl-30px">
+            <form class="width-full pr-30px pl-30px"  #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
                 <div class="form-group">
                     <label class="form-control-label">E-Posta</label>
-                    <input type="text" class="form-control">
+                    <input type="text" id="email" name="email" ngModel required class="form-control">
                 </div>
                 <div class="form-group">
                     <label class="form-control-label">Şifre</label>
-                    <input type="password" class="form-control">
+                    <input type="password" id="password" name="password" ngModel required minlength="6" class="form-control">
                 </div>
                 <div style="float: right;">
                     <button type="submit" class="btn btn-outline-primary">GİRİŞ</button>
