--- a/newslyapp/src/app/features/auth/login/login.component.scss
+++ b/newslyapp/src/app/features/auth/login/login.component.scss
@@ -7,6 +7,10 @@
     @media (max-width: 768px) {
       margin: 0 20px;
   }
+
+  h2{
+    color: #c7cbd1;
+  }
   
     .login-form {
       display: flex;
