feat: user and admin layout structures were created. architectural adjustments were made, and the routes structure was updated with lazy loading.

--- a/newslyapp/src/app/features/users/news/news-list/news-list.component.html
+++ b/newslyapp/src/app/features/users/news/news-list/news-list.component.html
@@ -9,7 +9,7 @@
       <div class="popular">
           <div style="float: right;">
               <div class="mb-40px">
-                  <app-footer></app-footer>
+                  <user-footer></user-footer>
               </div>
               <app-popular-news [news]="news" ></app-popular-news>
           </div>
