--- a/newslyapp/src/app/shared/layouts/user-layout/user-layout.component.html
+++ b/newslyapp/src/app/shared/layouts/user-layout/user-layout.component.html
@@ -1,11 +1,11 @@
-<div class="d-flex">
+<div class="d-flex user-page">
     <div class="sidebar-wrapper" #sidenav [ngClass]="{'open': isSidebarOpen}">
-        <app-sidebar [isSidebarOpen]="isSidebarOpen" (closeSideNav)="toggleSidebar()"></app-sidebar>
+        <user-sidebar [isSidebarOpen]="isSidebarOpen" (closeSideNav)="toggleSidebar()"></user-sidebar>
     </div>
     <div class="margin-auto width-full max-width-1024px">
         <div class="flex-grow-1">
             <div class="mb-35px header">
-                <app-header (toggleSidebar)="toggleSidebar()"></app-header>
+                <user-header (toggleSidebar)="toggleSidebar()"></user-header>
             </div>
             <div class="mb-35px content">
                 <router-outlet></router-outlet>
