feat: admin panel sidebar and header template created.

--- a/newslyapp/src/app/features/admin/dashboard/dashboard.component.html
+++ b/newslyapp/src/app/features/admin/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<button (click)="test()">Çıkış Yap</button>
+<div class="d-flex justify-content-between">
+    <div class="width-500px height-400px border-radius-15px" style="background-color: #110d3e;">
+
+    </div>
+    <div class="width-500px height-300px border-radius-15px" style="background-color: #110d3e;">
+
+    </div>
+    
+</div>
