--- a/newslyapp/src/app/shared/layouts/admin-layout/admin-layout.component.scss
+++ b/newslyapp/src/app/shared/layouts/admin-layout/admin-layout.component.scss
@@ -1,6 +1,6 @@
 .admin-page{
     min-height: 100vh;
-    background: #222D32;
+    background: #211d52;
 
     @media (max-width: 768px) {
         display: block;
