--- a/newslyapp/src/assets/css/_custom.scss
+++ b/newslyapp/src/assets/css/_custom.scss
@@ -1,4 +1,5 @@
 $size-values: (
+    20px,
     22px,
     24px,
     30px,
@@ -20,6 +21,7 @@ $size-values: (
     270px,
     300px,
     354px,
+    400px,
     450px,
     500px,
     670px,
