feat: admin news list component created. Data fetched. html and scss structure established. Responsive feature added.

--- a/newslyapp/src/app/shared/layouts/admin-layout/admin-layout.component.html
+++ b/newslyapp/src/app/shared/layouts/admin-layout/admin-layout.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex admin-page">
-    <div class="sidebar-wrapper">
-        <admin-sidebar></admin-sidebar>
+    <div class="sidebar-wrapper"  #sidenav [ngClass]="{'open': isSidebarOpen}">
+        <admin-sidebar [isSidebarOpen]="isSidebarOpen" (closeSideNav)="toggleSidebar()"></admin-sidebar>
     </div>
-    <div class="flex-grow-1">
+    <div class="flex-grow-1 content">
         <div class="mb-35px ">
-            <admin-header></admin-header>
+            <admin-header (toggleSidebar)="toggleSidebar()"></admin-header>
         </div>
         <div class="margin-auto width-full max-width-1024px">
             <div class="mb-35px">
