--- a/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.html
+++ b/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.html
@@ -1,8 +1,6 @@
 <div class="height-97px d-flex align-items-center justify-content-between">
-    <div class="flex-grow-1 pl-40px">
-        <div class="toggle-sidebar text-gray disabled">☰</div>
-    </div> 
-
+    <div class="toggle-sidebar text-gray disabled" (click)="openSidenav()">☰</div>
+    <div class="flex-grow-1 "></div> 
     <div class="d-flex align-items-center">
         <div class="pr-15px">
             <i class="fa-solid fa-magnifying-glass text-gray pr-10px font-size-xl"></i>
