--- a/newslyapp/src/app/shared/layouts/admin-layout/admin-layout.component.scss
+++ b/newslyapp/src/app/shared/layouts/admin-layout/admin-layout.component.scss
@@ -10,15 +10,16 @@
         width: 245px; 
         transition: width 0.5s ease-in-out; 
         
-        @media (max-width: 1283px) {
+        @media (max-width: 1300px) {
           width: 0;
           overflow: hidden; 
         }
       }
 
-      .footer {
-        position: sticky;
-        top: 100%;
-        text-align: center;
+      .content {
+        transition: padding 0.5s ease;
+        @media (max-width: 1100px) {
+          padding: 0 10px; 
+        }
       }
 }
