--- a/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.scss
+++ b/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.scss
@@ -1,5 +1,5 @@
 .disabled {
-    @media (min-width: 1283px) {
+    @media (min-width: 1300px) {
         display: none;
     }
 }
@@ -7,4 +7,10 @@
 .toggle-sidebar {
     font-size: 24px;
     cursor: pointer;
+    margin-left: 40px;
+    transition: margin-left 0.5s ease;
+
+    @media (max-width: 768px) {
+        margin-left: 10px; 
+      }
   }
