--- a/newslyapp/src/assets/css/color2.scss
+++ b/newslyapp/src/assets/css/color2.scss
@@ -14,6 +14,7 @@ $colors: (
   'off-white' : #c7cbd1,
   'admin-footer': #2c2a29,
   'lavender': #9799b5,
+  'indigo': #110d3e,
 );
 
 @mixin generate-background-classes($color-map) {
